--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.0</version>
+        </dependency>
 
         <!--Test dependencies-->
         <dependency>
